--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
-streamlit>=1.28.0
-paho-mqtt>=1.6.1
-pandas>=2.0.0
-plotly>=5.17.0
+# requirements.txt
+streamlit==1.32.0
+pandas==2.2.0
+numpy==1.26.4
+plotly==5.18.0
+paho-mqtt==1.6.1
+scikit-learn==1.4.0
+matplotlib==3.8.2
+seaborn==0.13.0
+joblib==1.3.2
+pyyaml==6.0.1
+python-dotenv==1.0.0
+cryptography==42.0.4
