--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,23 @@ joblib==1.3.2
 pyyaml==6.0.1
 python-dotenv==1.0.0
 cryptography==42.0.4
+
+# Streamlit Dashboard DHT11 ML Requirements
+# Last updated: December 2024
+
+# ==================== STREAMLIT & CORE ====================
+streamlit>=1.29.0
+pandas>=2.1.0
+numpy>=1.24.0
+
+# ==================== MACHINE LEARNING ====================
+scikit-learn>=1.3.0
+
+# ==================== DATA VISUALIZATION ====================
+plotly>=5.18.0
+
+# ==================== MQTT FOR REAL-TIME ====================
+paho-mqtt>=1.6.1
+
+# ==================== UTILITIES ====================
+python-dateutil>=2.8.2
