--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,9 @@
-# requirements.txt
-streamlit==1.32.0
-pandas==2.2.0
-numpy==1.26.4
-plotly==5.18.0
-paho-mqtt==1.6.1
-scikit-learn==1.4.0
-matplotlib==3.8.2
-seaborn==0.13.0
-joblib==1.3.2
-pyyaml==6.0.1
-python-dotenv==1.0.0
-cryptography==42.0.4
-
-# Streamlit Dashboard DHT11 ML Requirements
-# Last updated: December 2024
-
-# ==================== STREAMLIT & CORE ====================
-streamlit>=1.29.0
-pandas>=2.1.0
-numpy>=1.24.0
-
-# ==================== MACHINE LEARNING ====================
-scikit-learn>=1.3.0
-
-# ==================== DATA VISUALIZATION ====================
-plotly>=5.18.0
-
-# ==================== MQTT FOR REAL-TIME ====================
-paho-mqtt>=1.6.1
-
-# ==================== UTILITIES ====================
-python-dateutil>=2.8.2
+streamlit
+pandas
+numpy
+plotly
+paho-mqtt
+scikit-learn
+pickle5
+warnings
+jsonschema
